--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,2 +1,58 @@
 @use "../abstract/" as *;
 
+.nav {
+    &__wrapper {
+        display: flex;
+        flex-direction: row;
+        padding: 3rem 5rem;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid #ccc;
+        .nav__left {
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            .nav__logo {
+                width: 5rem;
+                height: 5rem;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+        .nav__right {
+            display: flex;
+            gap: 4rem;
+        }
+        .nav__right ul, li{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 2.5rem;
+        }
+    }
+
+    @media screen and (max-width: 500px) {
+        &__wrapper {
+          flex-direction: column;
+          padding: 2rem;
+          gap: 1rem;
+          .btn {
+            padding: 0.5rem 1.5rem;
+        }
+    
+          .nav__right {
+            flex-direction: row;
+            gap: 1rem;
+
+    
+            ul {
+              flex-direction: row;
+              gap: 2rem;
+          }
+        }
+      }
+    }
+
+}
