--- a/scss/layout/_cta.scss
+++ b/scss/layout/_cta.scss
@@ -1,2 +1,118 @@
 @use "../abstract/" as *;
 
+.cta {
+  padding: 8rem 0;
+
+  &__wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 5rem;
+    position: relative;
+    background: $clr-blue;
+    display: flex;
+  }
+
+  small {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    display: block;
+  }
+
+  &__text {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+
+    h2 {
+      font-size: 4rem;
+      line-height: 1.2;
+      font-weight: 500;
+      margin-bottom: 2rem;
+    }
+
+    h4 {
+      font-size: 2rem;
+      line-height: 1.5;
+      font-weight: normal;
+      margin-bottom: 30px;
+      width: 45rem;
+    }
+  }
+
+  .btn {
+    display: inline-block;
+    text-decoration: none;
+    padding: 12px 24px;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: 500;
+    transition: all 0.3s ease;
+
+    &-dark {
+      background-color: $clr-dark;
+      color: $clr-light;
+
+      &:hover {
+        background-color: $clr-dark;
+        transform: translateY(-2px);
+      }
+
+      &::after {
+        content: "→";
+        margin-left: 5px;
+        transition: all 0.3s ease;
+      }
+
+      &:hover::after {
+        margin-left: 8px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    .cta {
+      padding: 4rem 1rem;
+
+      &__wrapper {
+        flex-direction: column;
+        padding: 3rem 2rem;
+        small {
+          text-align: center;
+          margin-bottom: 3rem;
+        }
+      }
+
+      &__text {
+        text-align: center;
+        margin: 0;
+
+        h2 {
+          font-size: 2.2rem;
+          line-height: 1.3;
+          margin-bottom: 1.5rem;
+        }
+
+        h4 {
+          font-size: 1.4rem;
+          width: 100%;
+          margin-bottom: 2rem;
+        }
+      }
+
+      small {
+        font-size: 12px;
+        text-align: center;
+      }
+
+      .btn {
+        width: 100%;
+        font-size: 14px;
+        text-align: center;
+        padding: 10px 16px;
+      }
+    }
+  }
+}
