--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -7,7 +7,7 @@
     padding: 6rem 4rem 3rem;
   
     &__wrapper {
-      max-width: 1280px;
+      max-width: 100%;
       margin: 0 auto;
       display: grid;
       grid-template-columns: 1.2fr 1fr 1fr 1fr;
