--- a/scss/page/_contacts.scss
+++ b/scss/page/_contacts.scss
@@ -4,37 +4,46 @@
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding-top: 10rem;
   }
   &__info {
     flex: 1;
-    align-self: center;
     margin-left: 15rem;
     max-width: 50%;
     small {
+      width: 632px;
+      height: 17px;
       font-weight: 500;
       font-size: 12px;
       letter-spacing: 1px;
+      line-height: 140%;
       text-transform: uppercase;
     }
     h1 {
-      padding: 0.5rem 0;
-      font-weight: 500;
-      font-size: 50px;
+      width: 600px;
+      height: 192px;
+      font-weight: 400;
+      font-size: 80px;
+      line-height: 120%;
       color: $clr-dark;
     }
     p {
-      font-weight: 500;
-      font-size: 15px;
-      width: 300px;
+      width: 500px;
+      height: 86px;
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 180%;
       color: $clr-dark;
     }
   }
 
   &__form {
-    margin: 5rem 0;
-    flex: 1;
+    width: 672px;
+    height: 713px;
 
     .form__wrapper {
+      width: 544px;
+      height: 585px;
       display: flex;
       flex-direction: column;
       padding: 2rem 5rem;
@@ -131,18 +140,21 @@
   &__wrapper {
     display: flex;
     flex-direction: row;
-    padding-left: 10rem;
+    padding: 0 10rem;
 
-    h1 {
-      font-size: 2rem;
-      font-weight: 300;
+    small {
+      font-size: 12px;
+      font-weight: 500;
+      line-height: 140%;
+      text-transform: uppercase;
+      letter-spacing: 1px;
       margin-bottom: 10px;
     }
 
     h2 {
-      font-size: 3rem;
-      margin-bottom: 40px;
-      font-weight: bold;
+      font-size: 48px;
+      font-weight: 400;
+      line-height: 130%;
     }
   }
   &__text {
@@ -157,18 +169,17 @@
     justify-content: space-between;
     align-items: flex-start;
     padding: 1rem 0;
-    border-top: 1px solid #eee;
-
-    &:last-child {
-      border-bottom: 1px solid #eee;
-    }
+    
   }
 
   &__question {
+    width: 676px;
+    height: 38px;
     font-size: 18px;
     color: $clr-dark;
-    margin-bottom: 15px;
-    font-weight: normal;
+    line-height: 160%;
+    font-weight: 400;
+    font-size: 24px;
   }
 
   &__answer {
