--- a/scss/layout/_cta.scss
+++ b/scss/layout/_cta.scss
@@ -71,48 +71,46 @@
       }
     }
   }
+}
 
-  @media screen and (max-width: 500px) {
-    .cta {
-      padding: 4rem 1rem;
+  @media screen and (max-width: 520px) {
+  .cta {
+    padding: 4rem 0;
 
-      &__wrapper {
-        flex-direction: column;
-        padding: 3rem 2rem;
-        small {
-          text-align: center;
-          margin-bottom: 3rem;
-        }
+    &__wrapper {
+      flex-direction: column;
+      padding: 5rem 0;
+    }
+
+    &__text {
+      text-align: center;
+      max-width: 100%;
+
+      h2 {
+        font-size: 2.2rem;
       }
 
-      &__text {
-        text-align: center;
-        margin: 0;
-
-        h2 {
-          font-size: 2.2rem;
-          line-height: 1.3;
-          margin-bottom: 1.5rem;
-        }
-
-        h4 {
-          font-size: 1.4rem;
-          width: 100%;
-          margin-bottom: 2rem;
-        }
-      }
-
-      small {
-        font-size: 12px;
-        text-align: center;
-      }
-
-      .btn {
+      h4 {
+        font-size: 1.2rem;
         width: 100%;
-        font-size: 14px;
-        text-align: center;
-        padding: 10px 16px;
+        padding: 0 3rem;
       }
+    }
+
+    .btn {
+      font-size: 14px;
+      padding: 10px 20px;
+      margin-top: 1rem;
+
+      &-dark::after {
+        margin-left: 4px;
+      }
+    }
+
+    small {
+      font-size: 12px;
+      text-align: center;
     }
   }
 }
+
