--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,57 +1,171 @@
 @use "../abstract/" as *;
 
-.nav {
-    &__wrapper {
-        display: flex;
-        flex-direction: row;
-        padding: 3rem 5rem;
-        justify-content: space-between;
-        align-items: center;
-        .nav__left {
-            display: flex;
-            align-items: center;
-            gap: 2rem;
-            .nav__logo {
-                width: 5rem;
-                height: 5rem;
-                img {
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-        }
-        .nav__right {
-            display: flex;
-            gap: 4rem;
-        }
-        .nav__right ul, li{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 2.5rem;
-        }
+.header {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(52, 51, 51, 0.2);
+  }
+
+  &__branding {
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+  }
+
+  &--hiring {
+    color: $clr-dark;
+    background-color: $clr-accent;
+    padding: 0.6rem 1.5rem;
+    border-radius: 2rem;
+    font-size: 1.2rem;
+    letter-spacing: 0.2px;
+    font-weight: 600;
+
+    &:hover {
+      filter: brightness(95%);
     }
+  }
 
-    @media screen and (max-width: 500px) {
-        &__wrapper {
-          flex-direction: column;
-          padding: 2rem;
-          gap: 1rem;
-          .btn {
-            padding: 0.5rem 1.5rem;
-        }
-    
-          .nav__right {
-            flex-direction: row;
-            gap: 1rem;
+  &--talk {
+    color: $clr-dark;
+    border: 1px solid $clr-dark;
+    background-color: $clr-light;
+    padding: 1rem 1.2rem;
+    border-radius: 3rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    transition: all 0.5s ease;
 
-    
-            ul {
-              flex-direction: row;
-              gap: 2rem;
-          }
-        }
+    &:hover {
+      background-color: $clr-dark;
+      color: $clr-light;
+      transition: all 0.5s ease;
+    }
+  }
+}
+
+nav {
+  display: flex;
+  gap: 5rem;
+  align-items: center;
+
+  &.active {
+    display: block;
+    position: absolute;
+    top: 78px;
+  }
+}
+
+.header__nav {
+  display: flex;
+  gap: 2.2rem;
+  align-items: center;
+
+  a {
+    color: $clr-dark;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+
+  li {
+    a {
+      color: $clr-dark;
+      font-size: 1.3rem;
+      position: relative;
+
+      &::after {
+        position: absolute;
+        content: " ";
+        width: 0%;
+        height: 1px;
+        background-color: $clr-dark;
+        left: 0;
+        bottom: -3.1px;
+        transition: all 0.3s ease-in-out;
+      }
+
+      &:hover::after {
+        width: 100%;
       }
     }
-
+  }
 }
+
+.ToggleMenu {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 25px;
+  height: 18px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  z-index: 10;
+
+  span {
+    display: block;
+    height: 3px;
+    background-color: #000;
+    border-radius: 2px;
+    transition: 0.3s ease;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .header__nav {
+    flex-direction: column;
+    margin-top: -30rem;
+    transform: translateY(30rem);
+    background-color: $clr-dark;
+    width: 49rem;
+    padding: 2rem;
+    align-items: center;
+
+    li {
+      color: $clr-light;
+      font-size: 1.5rem;
+      font-weight: 500;
+      align-items: center;
+      width: 100%;
+      text-align: center;
+
+      a {
+        color: $clr-light;
+        font-size: 1.5rem;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .header--talk {
+    width: fit-content;
+  }
+
+  .ToggleMenu {
+    display: block !important;
+
+    span {
+      display: block;
+      height: 0.2rem;
+      width: 2.5rem;
+      background-color: #000;
+      border-radius: 2px;
+      transition: 0.3s ease;
+      margin: 0.5rem 1rem 0;
+      right: 0;
+    }
+  }
+
+  nav {
+    display: none;
+  }
+} 
+
