--- a/scss/page/_contacts.scss
+++ b/scss/page/_contacts.scss
@@ -1,6 +1,8 @@
 @use "../abstract/" as *;
 
 .contacts {
+  margin-bottom: 10rem;
+
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -8,7 +10,7 @@
   }
   &__info {
     flex: 1;
-    margin-left: 15rem;
+    margin-left: 20rem;
     max-width: 50%;
     small {
       width: 632px;
@@ -21,7 +23,6 @@
     }
     h1 {
       width: 600px;
-      height: 192px;
       font-weight: 400;
       font-size: 80px;
       line-height: 120%;
@@ -39,7 +40,6 @@
 
   &__form {
     width: 672px;
-    height: 713px;
 
     .form__wrapper {
       width: 544px;
@@ -69,8 +69,14 @@
         opacity: 70%;
       }
 
-      .text3 input {
-        padding-bottom: 15rem;
+      textarea {
+        height: 18rem;
+        resize: none;
+        padding: 1rem 1rem;
+        border: none;
+        font-size: 12px;
+        color: $clr-dark;
+        opacity: 70%;
       }
 
       .btn {
@@ -84,54 +90,60 @@
     }
   }
 
-  @media screen and (max-width: 500px) {
-    .contacts {
-      &__wrapper {
-        display: flex;
-        flex-direction: column;
+  @media screen and (max-width: 520px) {
+  .contacts {
+
+    &__wrapper {
+      grid-template-columns: 1fr;
+      margin: -10rem 0;
+      padding: 10rem 5rem 0;
+    }
+
+    &__info {
+      margin-left: 0;
+      max-width: 100%;
+      text-align: center;
+
+      small {
+        width: 100%;
+        font-size: 10px;
+      }
+
+      h1 {
+        width: 100%;
+        font-size: 36px;
+        line-height: 1.2;
+      }
+
+      p {
+        width: 100%;
+        font-size: 16px;
+        line-height: 1.6;
+      }
+    }
+
+    &__form {
+      width: 100%;
+
+      .form__wrapper {
+        width: 100%;
+        height: auto;
         padding: 2rem;
-        gap: 3rem;
-      }
-  
-      &__info {
-        margin-left: 0;
-        max-width: 100%;
-        text-align: center;
-  
-        h1 {
-          font-size: 28px;
-        }
-  
-        p {
-          font-size: 14px;
+
+        input,
+        textarea {
           width: 100%;
+          font-size: 12px;
         }
-      }
-  
-      &__form {
-        margin: 0;
-  
-        .form__wrapper {
-          padding: 2rem;
+
+        .btn {
           width: 100%;
-          height: auto;
-  
-          input {
-            width: 100%;
-          }
-  
-          .text3 input {
-            padding-bottom: 10rem;
-          }
-  
-          .btn {
-            width: 100%;
-            margin: 3rem 0;
-          }
+          font-size: 12px;
         }
       }
     }
   }
+}
 }
 
 .faq {
@@ -140,7 +152,7 @@
   &__wrapper {
     display: flex;
     flex-direction: row;
-    padding: 0 10rem;
+    padding: 0 15rem 10rem;
 
     small {
       font-size: 12px;
@@ -201,54 +213,60 @@
     }
   }
 
-  @media screen and (max-width: 500px) {
-    .faq {
-      padding: 3rem 1rem;
-  
-      &__wrapper {
-        flex-direction: column;
-        padding: 0 3rem;
-  
-        h1 {
-          font-size: 1.4rem;
-          text-align: center;
-        }
-  
-        h2 {
-          font-size: 2rem;
-          text-align: center;
-          margin-bottom: 2rem;
-        }
+  @media screen and (max-width: 520px) {
+  .faq {
+    padding: 3rem 1.5rem;
+
+    &__wrapper {
+      flex-direction: column;
+      padding: 0 5rem 4rem;
+      text-align: left;
+
+      small {
+        font-size: 10px;
+        margin-bottom: 0.5rem;
       }
-  
-      &__text {
-        padding: 0;
-      }
-  
-      &__qa {
-        padding: 0;
-      }
-  
-      &__item {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 1rem;
-      }
-  
-      &__question {
-        font-size: 16px;
-      }
-  
-      &__answer {
-        font-size: 13px;
-        padding-right: 0;
-      }
-  
-      &__icon {
-        font-size: 20px;
-        margin-left: 0;
-        align-self: flex-end;
+
+      h2 {
+        font-size: 28px;
+        line-height: 1.3;
       }
     }
+
+    &__text {
+      padding: 0;
+      margin-bottom: 2rem;
+    }
+
+    &__qa {
+      padding: 0;
+      text-align: left;
+    }
+
+    &__item {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 1rem 0;
+    }
+
+    &__question {
+      width: 90%;
+      font-size: 18px;
+      line-height: 1.4;
+    }
+
+    &__answer {
+      display: none;
+      font-size: 14px;
+      padding-right: 0;
+      margin-top: 0.5rem;
+    }
+
+    &__icon {
+      font-size: 20px;
+      margin-left: 0;
+      margin-top: 0.5rem;
+    }
   }
+}
 }
