--- a/scss/page/_work.scss
+++ b/scss/page/_work.scss
@@ -2,11 +2,8 @@
 
 .work {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 10rem 15rem 0;
-  gap: 2rem;
-  background-color: $clr-light;
+    padding: 10rem 22rem;
+    background-color: $clr-light;
 
   &__wrapper {
     small {
@@ -29,31 +26,15 @@
       color: $clr-dark;
     }
   }
-  @media screen and (max-width: 500px) {
-    padding: 2rem 2rem;
-
-    .work__wrapper {
-      h1 {
-        font-size: 28px;
-        width: 100%;
-      }
-
-      p {
-        font-size: 14px;
-        width: 100%;
-      }
-    }
-  }
 }
 
 .samples {
   &__wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 5rem;
-    padding: 5rem 5rem;
+    padding: 5rem 0;
   }
 
   &__work {
@@ -85,41 +66,59 @@
 
   &__image img {
     max-width: 100%;
-    width: 950px;
-    height: 515px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .work {
+    padding: 0 5rem;
+
+    &__wrapper {
+      small {
+        font-size: 11px;
+      }
+
+      h1 {
+        font-size: 2rem;
+        width: 100%;
+        padding: 1rem 0;
+      }
+
+      p {
+        font-size: 13px;
+        width: 100%;
+      }
+    }
   }
 
+  .samples {
+    &__wrapper {
+      gap: 3rem;
+      padding: 3rem 5rem;
+    }
 
-  @media screen and (max-width: 500px) {
-    .samples {
-      &__wrapper {
-        padding: 3rem 1.5rem;
-        gap: 3rem;
+    &__work {
+      width: 100%;
+    }
+
+    &__text {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.5rem;
+
+      p,
+      small {
+        font-size: 12px;
       }
-  
-      &__work {
-        width: 100%;
+
+      small {
+        padding: 0.2rem 0.8rem;
       }
-  
-      &__text {
-        flex-direction: row;
-        align-items: flex-start;
-        gap: 0.5rem;
-  
-        p,
-        small {
-          font-size: 12px;
-        }
-  
-        small {
-          padding: 0.2rem 0.8rem;
-        }
-      }
-  
-      &__image img {
-        width: 100%;
-        height: auto;
-      }
+    }
+
+    &__image img {
+      width: 100%;
+      height: auto;
     }
   }
 }
